--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<nav class='navbar navbar-dark bg-dark'>
+  <span class='navbar-brand'>M'Cheyne Bible Reading Plan</span>
+</nav>
+<div class='container pt-3'>
+  {{outlet}}
+</div>
