--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,6 @@
 </div>
 <div class='pt-6 flex justify-center text-grey-dark font-thin text-sm'>
   <div>
-    Mcheyne Bible Readig Plan
+    M'Cheyne Bible Reading Plan
   </div>
 </div>
